US5959: Code review fixes